2019-10-15  John D. Ramsdell  <ramsdell@mitre.org>

	* cmu.cabal (Version): Released as version 1.12

	* src/Algebra/CommutativeMonoid/Main.hs (AnsErr): Updated code
	to support the MonadFail proposal as implemented in base-4.13.0.0.

2018-01-06  John D. Ramsdell  <ramsdell@mitre.org>

	* src/Algebra/CommutativeMonad/Main.hs (readM): Adapted the code
	to work when Monad no longer has a fail method.

2015-04-27  John D. Ramsdell  <ramsdell@mitre.org>

	* src/Algebra/CommutativeMonad/Main.hs (AnsErr): Added Functor and
	Applicative instance so that the code compiles with GHC 7.10.
	Thanks go to Douglas McClean.

	* cmu.cabal (Version): Released as version 1.10

2013-02-21  John D. Ramsdell  <ramsdell@mitre.org>

	* cmu.cabal (Location): Added repository location.

	* cmu.cabal (Version): Released as version 1.9.

2012-05-12  John D. Ramsdell  <ramsdell@mitre.org>

	* cmu.cabal (Version): Released as version 1.8.

	* src/Algebra/CommutativeMonoid/LinDiophEq.hs: Used the method in
	the paper by Contejean and Devie for solving an inhomogeneous
	equation using the algorithm for the homogeneous equation solver.
	The previous version buggy.

2012-05-02  John D. Ramsdell  <ramsdell@mitre.org>

	* cmu.cabal (Version): Released as version 1.7.

2012-04-27  John D. Ramsdell  <ramsdell@mitre.org>

        * src/Algebra/CommutativeMonoid/LinDiophEq.hs: Corrected spelling
	error by replacing Diaphantine with Diophantine.

2012-04-25  John D. Ramsdell  <ramsdell@mitre.org>

	* cmu.cabal (Version): Released as version 1.6.

	* src/Algebra/CommutativeMonoid/LinDiaphEq.hs: Added code that
	solves inhomogeneous equations.

2012-02-29  John D. Ramsdell  <ramsdell@mitre.org>

	* cmu.cabal (Version): Released as version 1.5.

	* src/Algebra/CommutativeMonoid/{Main.hs,Unification.hs}:
	Corrected spelling of monoid in several places.

2012-02-29  John D. Ramsdell  <ramsdell@mitre.org>

	* cmu.cabal (Version): Released as version 1.4.  Also, constrained