@@ -1,3 +1,7 @@
+2021-04-14  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* Makefile: Vastly simplified the makefile.
+
 2019-10-15  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* cmu.cabal (Version): Released as version 1.12
